test/libyul/yulSyntaxTests/hex_assignment_long.yul
{
    let x := hex"00110011001100110011001100110011001100110011001100110011001100110011001100110011"
}
// ----
// TypeError 3069: (15-100): String literal too long (40 > 32)
